updated offline playbook

--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -56,10 +56,11 @@
   hosts: "{{ target_offline_hosts }}"
   tags: ['upload']
   gather_facts: no
-  property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee"
-    - "{{ playbook_dir }}"
+  vars:
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
+      - "{{ playbook_dir }}"
   roles:
     - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
   tasks:
