--- a/post-installation/teams/enable-teams-on-ms.yml
+++ b/post-installation/teams/enable-teams-on-ms.yml
@@ -5,7 +5,11 @@
   vars:
     cwc_properties:
       - { key: conf_security_ldap, value: true, file_name: management-server.properties }
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
+    - { role: apigee-opdk-modules }
     - { role: apigee-opdk-cwc-update }
     - { role: apigee-opdk-stop-components, component_name: 'edge-management-server' }
     - { role: apigee-opdk-start-components, component_name: 'edge-management-server' }
