updated to enable teams

--- a/post-installation/teams/enable-teams-on-org.yml
+++ b/post-installation/teams/enable-teams-on-org.yml
@@ -8,6 +8,8 @@
       - "~/.apigee"
   roles:
     - { role: apigee-opdk-modules }
+    - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+    - { role: apigee-opdk-settings-management-server, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
 
   tasks:
     - name: Enable teams on org
