--- a/post-installation/teams/enable-teams-on-org.yml
+++ b/post-installation/teams/enable-teams-on-org.yml
@@ -14,7 +14,7 @@
   tasks:
     - name: Enable teams on org
       uri:
-        url: http://{{ mgmt_ip }}:8080/organizations/{{ org_name }}
+        url: http://{{ local_mgmt_ip }}:8080/organizations/{{ org_name }}
         method: POST
         username: "{{ opdk_user_email }}"
         password: "{{ opdk_user_pass }}"
