--- a/post-installation/teams/enable-teams-on-org.yml
+++ b/post-installation/teams/enable-teams-on-org.yml
@@ -16,7 +16,7 @@
       uri:
         url: http://{{ local_mgmt_ip }}:{{ ms_port }}/o/{{ org_name }}
         method: POST
-        username: "{{ opdk_user_email }}"
+        user: "{{ opdk_user_email }}"
         password: "{{ opdk_user_pass }}"
         body_format: json
         body:
