--- a/post-installation/teams/enable-teams-on-org.yml
+++ b/post-installation/teams/enable-teams-on-org.yml
@@ -18,6 +18,7 @@
         method: POST
         user: "{{ opdk_user_email }}"
         password: "{{ opdk_user_pass }}"
+        force_basic_auth: yes
         body_format: json
         body:
           name: "{{ org_name }}"
