--- a/post-installation/teams/enable-teams-on-org.yml
+++ b/post-installation/teams/enable-teams-on-org.yml
@@ -14,7 +14,7 @@
   tasks:
     - name: Enable teams on org
       uri:
-        url: "http://{{ local_mgmt_ip }}:{{ ms_port }}/o/{{ org_name }}"
+        url: "http://{{ local_mgmt_ip }}:{{ ms_port }}/v1/o/{{ org_name }}"
         method: "POST"
         user: "{{ opdk_user_email }}"
         password: "{{ opdk_user_pass }}"
