updated to enable teams

--- a/post-installation/teams/create-team.yml
+++ b/post-installation/teams/create-team.yml
@@ -26,5 +26,4 @@
         body:
           name: "{{ org_name }}"
           displayName: "{{ org_name }}"
-          teamMembers:
-            - "{{ team_members }}"
+          teamMembers: "{{ team_members }}"
