updated to enable teams

--- a/post-installation/teams/create-team.yml
+++ b/post-installation/teams/create-team.yml
@@ -24,6 +24,6 @@
         force_basic_auth: "yes"
         body_format: "json"
         body:
-          name: "{{ org_name }}"
+          name: "{{ org_name }} Team"
           displayName: "{{ org_name }}"
           teamMembers: "{{ team_members }}"
