updated to enable teams

--- a/post-installation/teams/enable-teams-on-org.yml
+++ b/post-installation/teams/enable-teams-on-org.yml
@@ -21,7 +21,7 @@
         force_basic_auth: "yes"
         body_format: "json"
         body:
-          name: "{{ org_name }}"
+          name: "{{ org_name }} Team"
           properties:
             property:
             - name: features.isTeamsEnabled
