updated to enable teams

--- a/infrastructure/configure-ssh-login/configure-ssh-user.yml
+++ b/infrastructure/configure-ssh-login/configure-ssh-user.yml
@@ -51,11 +51,35 @@
     when: pubkey_state.stat.exists is defined
 
   - name: Enable root login over SSH
+    become: yes
     lineinfile:
       state: present
       dest: /etc/ssh/sshd_config
       regexp: '(^#)(PermitRootLogin yes)'
       line: '\2'
+      backrefs: yes
+    notify:
+    - Restart SSH service
+    when: remote_user == 'root'
+
+  - name: Enable root login over SSH
+    become: yes
+    lineinfile:
+      state: present
+      dest: /etc/ssh/sshd_config
+      regexp: '(PermitRootLogin) no'
+      line: '\1 yes'
+      backrefs: yes
+    notify:
+    - Restart SSH service
+    when: remote_user == 'root'
+
+  - name: Enable Default requiretty
+    lineinfile:
+      state: present
+      dest: /etc/sudoers
+      regexp: '(^#)(Defaults.*requiretty)'
+      line: 'Defaults !requiretty'
       backrefs: yes
     notify:
     - Restart SSH service
