--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -140,8 +140,6 @@
   serial: 1
   tags: ['qpid','edge']
   vars:
-    ansible_workspace: "~/ansible"
-    apigee_workspace: "~/.apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
@@ -152,27 +150,25 @@
   - { role: apigee-opdk-start-components, tags: ['qs-start', 'start'] }
   - { role: apigee-opdk-setup-status, tags: ['qs-status', 'status'] }
 
-- name: Configure & Install Postgres
-  hosts: pg
-  serial: 1
-  gather_facts: no
-  tags: ['pg','edge', 'analytics']
-  vars:
-    ansible_workspace: "~/ansible"
-    apigee_workspace: "~/.apigee-workspace"
-    property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee"
-  roles:
-    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
-    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
-    - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
-    - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
-    - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
-    - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
+#- name: Configure & Install Postgres
+#  hosts: pg
+#  serial: 1
+#  gather_facts: no
+#  tags: ['pg','edge', 'analytics']
+#  vars:
+#    property_folders:
+#    - "~/.apigee-secure"
+#    - "~/.apigee"
+#  roles:
+#    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
+#    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+#    - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+#    - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
+#    - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
+#    - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
 
 - name: Configure Postgres Master
-  hosts: pgmaster
+  hosts: pgmaster,pg[0]
   serial: 1
   gather_facts: no
   tags: ['pgmaster','edge', 'analytics']
@@ -184,6 +180,8 @@
     - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgmaster-config'] }
     - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
     - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+    - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
+    - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
     - { role: apigee-opdk-setup-postgres-config, tags: ['minimum', 'config', 'pgmaster-config'] }
     - { role: apigee-opdk-setup-postgres-master, tags: ['minimum', 'pgmaster-setup']  }
     - { role: apigee-opdk-setup-status, tags: ['pgmaster-status', 'status']  }
@@ -201,6 +199,7 @@
   - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgstandby-config'] }
   - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+  - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
   - { role: apigee-opdk-stop-components, component_name: 'apigee-postgresql', tags: ['minimum', 'pgstandby-config'] }
   - { role: apigee-opdk-setup-postgres-config, clear_pgdata: True, tags: ['minimum', 'pgstandby-config'] }
   - { role: apigee-opdk-setup-postgres-standby, tags: ['minimum', 'pgstandby-setup'] }
