--- a/infrastructure/configure-ssh-login/configure-ssh-user.yml
+++ b/infrastructure/configure-ssh-login/configure-ssh-user.yml
@@ -56,6 +56,7 @@
     lineinfile:
       state: present
       dest: /etc/ssh/sshd_config
+      insertafter: EOF
       line: 'PermitRootLogin yes'
       backrefs: yes
     notify:
@@ -65,6 +66,7 @@
     lineinfile:
       state: present
       dest: /etc/sudoers
+      insertafter: EOF
       line: "{{ item }}"
       backrefs: yes
     with_items:
