--- a/infrastructure/configure-ssh-login/configure-ssh-user.yml
+++ b/infrastructure/configure-ssh-login/configure-ssh-user.yml
@@ -68,6 +68,7 @@
     - Restart SSH service
 
   - name: Enable Root with no Password Prompt
+    become: true
     lineinfile:
       state: present
       dest: "{{ sudoers }}"
