--- a/infrastructure/configure-ssh-login/configure-ssh-user.yml
+++ b/infrastructure/configure-ssh-login/configure-ssh-user.yml
@@ -65,7 +65,7 @@
       - {regexp: '(^#)(PermitRootLogin yes)', line: '\2' }
       - {regexp: '(PermitRootLogin) no', line: '\1 yes' }
     notify:
-    - Restart SSH servic
+    - Restart SSH service
 
   - name: Enable Root with no Password Prompt
     become: true
