--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -153,7 +153,7 @@
   - { role: apigee-opdk-setup-status, tags: ['qs-status', 'status'] }
 
 - name: Configure & Install Postgres
-  hosts: pg
+  hosts: pgmaster,pgstandby
   serial: 1
   gather_facts: no
   tags: ['pg','edge', 'analytics']
