--- a/post-installation/add/add-components/add-postgres-standby.yml
+++ b/post-installation/add/add-components/add-postgres-standby.yml
@@ -11,10 +11,14 @@
       set_fact:
         replication_string: ''
 
-    - name: Create
+    - name: Create replication string
       set_fact:
         replication_string: "{{ replication_string }}host     replication     apigee {{ hostvars[item]['private_address'] }}/32     trust\n"
       with_items: "{{ groups['pgstandby'] }}"
+
+    - name: Update attribute
+      set_fact:
+        replication_string: "conf_pg_hba_replication.connection={{ replication_string }}"
 
     - debug:
         var: replication_string
