--- a/installations/multi-node/requirements.yml
+++ b/installations/multi-node/requirements.yml
@@ -96,4 +96,6 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-validate-cleanup.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-cwc-update.git
+
 
