--- a/post-installation/validations/rmp/validate.yml
+++ b/post-installation/validations/rmp/validate.yml
@@ -3,7 +3,12 @@
   hosts: rmp
   tags: ['validate']
   serial: 1
+  vars:
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'r-config'] }
     - { role: apigee-opdk-setup-validate, tags: ['validate-setup'] }
     - { role: apigee-opdk-setup-validate-cleanup, tags: ['validate-cleanup'] }
 
@@ -11,6 +16,11 @@
   hosts: r
   tags: ['validate']
   serial: 1
+  vars:
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'r-config'] }
     - { role: apigee-opdk-setup-validate, tags: ['validate-setup'] }
     - { role: apigee-opdk-setup-validate-cleanup, tags: ['validate-cleanup'] }
