--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -183,6 +183,8 @@
     - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
     - { role: apigee-opdk-setup-postgres-config, tags: ['minimum', 'config', 'pgmaster-config'] }
     - { role: apigee-opdk-setup-postgres-master, tags: ['minimum', 'pgmaster-setup']  }
+    - { role: apigee-opdk-start-components, tags: ['pgmaster-start', 'start'] }
+    - { role: apigee-opdk-stop-components, tags: ['pgmaster-stop', 'stop'] }
     - { role: apigee-opdk-setup-status, tags: ['pgmaster-status', 'status']  }
 
 - name: Configure Postgres Standby
