--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -202,6 +202,8 @@
   - { role: apigee-opdk-stop-components, component_name: 'apigee-postgresql', tags: ['minimum', 'pgstandby-config'] }
   - { role: apigee-opdk-setup-postgres-config, clear_pgdata: True, tags: ['minimum', 'pgstandby-config'] }
   - { role: apigee-opdk-setup-postgres-standby, tags: ['minimum', 'pgstandby-setup'] }
+  - { role: apigee-opdk-start-components, tags: ['pgstandby-start', 'start'] }
+  - { role: apigee-opdk-stop-components, tags: ['pgstandby-stop', 'stop'] }
   - { role: apigee-opdk-setup-status, tags: ['pgstandby-status','status']  }
 
 - name: Configure Organization and Environments
