--- a/post-installation/add/add-components/add-postgres-standby.yml
+++ b/post-installation/add/add-components/add-postgres-standby.yml
@@ -1,11 +1,24 @@
 ---
 - name: Update Postgres Standby variables
-  hosts: pgstandby
+  hosts: pg
+  vars:
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgmaster-config'] }
     - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
 
 - name: Add Postgres Standby servers beyond one
   hosts: pgmaster
+  vars:
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
+  roles:
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pgmaster-config'] }
+
   tasks:
     - name: Setup replication variable
       set_fact:
@@ -21,3 +34,25 @@
         name: apigee-opdk-cwc-update
       vars:
         { key: 'conf_pg_hba_replication.connection', value: '{{ replication_string }}', file_name: 'postgresql' }
+
+- name: Configure & Install Postgres
+  hosts: "{{ target_hosts }}"
+  serial: 1
+  gather_facts: no
+  tags: ['pg','edge', 'analytics']
+  vars:
+    ansible_workspace: "~/ansible"
+    apigee_workspace: "~/.apigee-workspace"
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
+  roles:
+    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'pg-config'] }
+    - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+    - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
+    - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
+    - { role: apigee-opdk-setup-postgres-config, clear_pgdata: True, tags: ['minimum', 'pgstandby-config'] }
+    - { role: apigee-opdk-setup-postgres-standby, tags: ['minimum', 'pgstandby-setup'] }
+    - { role: apigee-opdk-stop-components, tags: ['pgstandby-stop', 'stop'] }
+    - { role: apigee-opdk-start-components, tags: ['pgstandby-start', 'start'] }
+    - { role: apigee-opdk-setup-status, tags: ['pgstandby-status','status']  }
