--- a/installations/multi-node/install.yml
+++ b/installations/multi-node/install.yml
@@ -148,6 +148,7 @@
   - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'qs-config']  }
   - { role: apigee-opdk-setup-component, profile: 'qs', tags: ['minimum', 'qs-setup'] }
   - { role: apigee-opdk-start-components, tags: ['qs-start', 'start'] }
+  - { role: apigee-opdk-server-self, server_types: ['qs'], tags: ['self'] }
   - { role: apigee-opdk-setup-status, tags: ['qs-status', 'status'] }
 
 - name: Configure & Install Postgres
@@ -167,6 +168,7 @@
     - { role: apigee-opdk-setup-silent-installation-config, tags: ['minimum', 'config', 'pg-config']  }
     - { role: apigee-opdk-setup-component, profile: 'ps', tags: ['minimum', 'pg-setup'] }
     - { role: apigee-opdk-start-components, tags: ['pg-start', 'start'] }
+    - { role: apigee-opdk-server-self, server_types: ['ps'], tags: ['self'] }
     - { role: apigee-opdk-setup-status, tags: ['pg-status', 'status'] }
 
 - name: Configure Postgres Master
@@ -185,6 +187,7 @@
     - { role: apigee-opdk-setup-postgres-master, tags: ['minimum', 'pgmaster-setup']  }
     - { role: apigee-opdk-stop-components, tags: ['pgmaster-stop', 'stop'] }
     - { role: apigee-opdk-start-components, tags: ['pgmaster-start', 'start'] }
+    - { role: apigee-opdk-server-self, server_types: ['ps'], tags: ['self'] }
     - { role: apigee-opdk-setup-status, tags: ['pgmaster-status', 'status']  }
 
 - name: Configure Postgres Standby
