--- a/post-installation/remove/remove-components/requirements.yml
+++ b/post-installation/remove/remove-components/requirements.yml
@@ -7,7 +7,27 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-rollback.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-postgresql-remove.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-qpid-remove.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-scopes-remove.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-axgroup-remove.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-server-self.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-modules.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-management-server.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-ldap.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-cassandra.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-postgres.git
 
